cabal-version:      2.4
name:               jparser
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jelil Akjaly
maintainer:         jelil.akjaly@gmail.com

-- A copyright notice.
-- copyright:
category:           Text
extra-source-files: CHANGELOG.md

library
    exposed-modules:  JParser3 JParser2 JParser JINIParser JJSONParser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite parser-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
